# modurale

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  README.md
cmake/: ExternalBoost.cmake  ExternalCatch.cmake  ExternalSFML.cmake  FindAssimp.cmake  FindCatch.cmake  FindSFML.cmake  FindSQLite.cmake  Helpers.cmake  UseBoost.cmake  UseCatch.cmake  UseSFML.cmake  UseSQLite.cmake  build_subdirectory.cmake  configure_tool_chain.cmake  create_target.cmake  external.cmake  target.cmake  toolchain.cmake  using.cmake  utility.cmake
cmake/find/: FindAssimp.cmake  FindCatch.cmake  FindSQLite.cmake
cmake/script/: config.cmake.in  external.cmake  install.cmake  logging.cmake  project.cmake  target.cmake  toolchain.cmake  using.cmake  utility.cmake
cmake/use/: UseAssimp.cmake  UseBoost.cmake  UseCatch.cmake  UseGLEW.cmake  UseModurale.cmake  UseSFML.cmake  UseSQLite.cmake  UseThreads.cmake  boost.cmake  catch.cmake  glew.cmake  sfml.cmake  threads.cmake
project/: CMakeLists.txt
project/assimp/: CMakeLists.txt  project.cmake
project/boost/: CMakeLists.txt  project.cmake
project/catch/: CMakeLists.txt
project/game/: CMakeLists.txt
project/game/src/: main.cpp
project/game/test/: main.cpp
project/glew/: CMakeLists.txt
project/modurale/: CMakeLists.txt
project/modurale/include/manager/entity/: id.hpp  instance.inl  manager.hpp
project/modurale/include/manager/event/: instance.inl
project/modurale/include/system/: managers.hpp  module.hpp
project/modurale/include/type/: README.md
project/modurale/include/type/window/: type.hpp
project/modurale/src/manager/entity/: instance.cpp  manager.cpp
project/modurale/src/manager/event/: instance.cpp  manager.cpp
project/modurale/src/manager/log/: instance.cpp  manager.cpp  stream.cpp
project/modurale/src/module/window/: module.cpp
project/modurale/src/system/: managers.cpp  module.cpp  system.cpp
project/modurale/test/manager/entity/: manager.cpp
project/modurale/test/manager/event/: manager.cpp
project/modurale/test/manager/log/: log_no_prefix.hpp  manager.cpp  types.cpp
project/modurale/test/system/: system.cpp
project/sfml/: CMakeLists.txt
project/sqlite/: CMakeLists.txt  make.cmake  project.cmake
src/: CMakeLists.txt
src/application/: README.md  main.cpp
src/manager/: README.md
src/manager/entity/: instance.cpp  instance.hpp  manager.cpp  manager.hpp  manager.inl  property.hpp  property.inl  std_function.hpp
src/manager/event/: dispatcher.hpp  dispatcher.inl  instance.cpp  instance.hpp  integer_sequence.hpp  manager.cpp  manager.hpp  manager.inl
src/manager/log/: instance.cpp  instance.hpp  manager.cpp  manager.hpp  manager.inl  stream.cpp  stream.hpp  stream.inl
src/module/: README.md
src/module/window/: module.cpp  module.hpp
src/system/: README.md  managers.cpp  managers.hpp  module.cpp  module.hpp  system.cpp  system.hpp
src/type/window/: type.hpp
test/manager/entity/: entity.cpp
test/manager/event/: event.cpp  manager.cpp
test/manager/log/: log_no_prefix.hpp  manager.cpp  types.cpp
test/system/: system.cpp
tool/: dependencies.sh  setup-arch.sh  setup-ubuntu.sh
